--- a/timeline.css
+++ b/timeline.css
@@ -17,4 +17,9 @@
     stroke-width: 2;
     stroke: #ccc;
 }
+.x.axis-weeks path,
+.x.axis-weeks line {
+    stroke-width: 2;
+    stroke: #888;
+}
 
